# SciStudio

./: .aiderrc  .claudecode-cascade  .codespellrc  .gitignore  .governance-paths.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .quality-mutation.json  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS  Makefile  README.md  README.zh-CN.md  mkdocs.site.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  setup.py  vulture_allowlist.py
.agents/rules/: rules.md
.audit/: full-audit.json
.claude/rules/: adr-edits.md  changelog-format.md  core-contracts.md  frontend-smoke-test.md  governance-edits.md  qa-edits.md  rules.md  test-discipline.md
.codex/rules/: rules.md
.github/: AGENTS.md  CODEOWNERS
.github/workflows/: adr042-scheduled-audit.yml  ai-review.yml  ci.yml  deferral-scan.yml  desktop-linux-appimage.yml  desktop-macos-dmg.yml  desktop-windows-installer.yml  docs-build.yml  docs.yml  e2e-discovery.yml  governance-modification.yml  semantic-dup-scan.yml  translation.yml  workflow-gate.yml
.sentrux/: rules.toml
.specify/memory/: constitution.md
.workflow/: AGENTS.md  audit-pr-body.md  full-audit-1313.json  gate-record.schema.json  gate.py  schema-v2.yaml  schema.json
.workflow/audits/: 1320-full-audit.json  1327-full-audit.json
.workflow/ci/: __init__.py  baselines.py  ratchet.py
.workflow/hooks/: pre-commit
.workflow/records/: 1109-1309-registry-codeblock-cwd.json  1110-617-1281-1282-1368-tier1-surgical-bug-sweep.json  1269-gate-record-hooks-final.json  1285-scieasy-e2e-test-skill.json  1288-adr-addendum-util-loader.json  1289-adr-001-040-rewrite.json  1291-sentrux-baseline.json  1294-adr-signature-contracts-active-workflow-warning.json  1296-a1-core-io.json  1296-a2-imaging-io.json  1296-a3-frontend.json  1296-adr-043-package-migration-manager.json  1296-b1-imaging-propagation.json  1296-b2-srs-propagation.json  1296-c1-audit.json  1296-c1-fixes.json  1305-adr-043-phase-d-hotfix.json  1306-1371-imaging-ome-fidelity.json  1311-untrack-full-audit-umbrella.json  1313-lossy-save-collection-walk-and-null-skip.json  1316-workflow-records-mod-guard-whitelist.json  1318-rename-scieasy-to-scistudio.json  1320-gui-bugs-20260521.json  1327-block-ready-emit.json  1329-full-audit.json  1329-sentrux-evidence.json  1329-storage-reference-normalized-errors.json  1330-engine-collection-wrap.json  1330-umbrella-arch-drift.json  1332-types-scan.json  1334-vestigial-block-state.json  1335-1337-no-cycles-umbrella.json  1335-router-defaults.json  1337-pair-cycles.json  1340-wire-vulture.json  1343-1365-types-registry-worker.json  1352-adr-039-addendum-1-gui-downscope.json  1352-adr-039-addendum-1-impl-manager.json  1353-remove-stash-and-auto-commit.json  1355-inline-history-row-buttons.json  (+242 more)
ai_developers/: README.md
ai_developers/rules/: README.md  branch-pr-ci.md  code-quality.md  docs-governance.md  gate-workflow.md  hotfix.md  personas.md  protected-changes.md  root-policy.md  runtime-parity.md  spec-and-adr.md
desktop/: README.md  activation.js  main.js  ota.js  package-lock.json  package.json  preload-gate.js  preload.js
desktop/assets/: icon.icns
desktop/resources/: .gitignore  alpha-gate.html  alpha-public-key.pem
desktop/scripts/: build-python-runtime-linux.sh  build-python-runtime-macos.sh  build-python-runtime.ps1  fetch-git-portable.ps1  fetch-git-portable.sh  stage-resources.ps1  stage-resources.sh  start-dev.js  start-electron.js
desktop/test/: activation.test.js  alpha-token.test.js  build-python-runtime.test.js  linux-appimage.test.js  ota.test.js
docs/: AGENTS.md  agent-provisioning.md  alpha-activation-gate.md  cli-integration.md  data-storage-transport-audit.en.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  ADR-014.md  ADR-015.md  ADR-016.md  ADR-017.md  ADR-018.md  ADR-019.md  ADR-020.md  ADR-021.md  ADR-022.md  ADR-023.md  ADR-024.md  ADR-025.md  ADR-026.md  ADR-027.md  ADR-028.md  ADR-029.md  ADR-030.md  ADR-031.md  ADR-032.md  ADR-033-draft.md  ADR-033.md  ADR-034-draft.md  ADR-034.md  ADR-035-addendum1.md  ADR-035-draft.md  ADR-035.md  ADR-036.md  (+27 more)
docs/ai-developer/: gate-cli-command-set.md  rules.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_legacy.md  PROJECT_TREE.md  sentrux-rules.md
docs/assets/: README.md
docs/audit/: 1355-chrome-smoke-notes.md  1472-full-audit.json  1472-sentrux.json  (+146 more)
docs/block-development/examples/multi-block-package/: pyproject.toml
docs/block-development/examples/multi-block-package/src/my_blocks/: __init__.py
docs/block-development/examples/multi-block-package/src/my_blocks/blocks/: gaussian_blur.py  threshold.py
docs/block-development/examples/multi-block-package/src/my_blocks/types/: custom_image.py
docs/block-development/examples/multi-block-package/tests/: test_blocks.py
frontend/: .prettierignore  AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.ts
scripts/: alpha-token-gui.js  alpha-token-issuer.command  alpha-token.js  build-issuer-app.sh  check_god_files.py  committer.py  deferral_scan.py  find_cycles.py  ota_publish.py  scistudio_pr_create.py  semantic_dup_scan.py  spec_audit.py  translate_docs.py  verify_ome_propagation_e2e001.py  version.py
tests/: README.md  __init__.py  conftest.py  test_import_coverage.py  test_logging_config.py  test_version.py
tests/fixtures/scistudio-blocks-fixture/: README.md  pyproject.toml
tests/fixtures/scistudio-blocks-fixture/src/scistudio_blocks_fixture/: __init__.py  process_noop.py  types.py
tests/fixtures/scistudio-blocks-fixture/src/scistudio_blocks_fixture/io/: __init__.py  load_image.py  save_data.py
tests/fixtures/scistudio-blocks-fixture/src/scistudio_blocks_fixture/previewers/: __init__.py
tests/fixtures/scistudio-blocks-fixture/src/scistudio_blocks_fixture/previewers/assets/: viewer.js
tests/fixtures/scistudio-blocks-fixture/tests/: test_fixture_sanity.py
(+2184 files in other folders)
